--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -11,7 +11,7 @@
 
             <h1 class="text-truncate"><i class="fas fa-user"></i> {{ .Player.GetName }}</h1>
 
-            <small>
+            <small class="d-block">
                 <a target="_blank" rel="noopener" href="{{ .Player.CommunityLink }}"><i class="fab fa-steam-square"></i> Steam Community Profile</a>
                 <a href="{{ .Player.GetFriendLink }}"><i class="fab fa-steam-square"></i> Add to Friends</a>
                 <a href="{{ .Player.GetMessageLink }}"><i class="fab fa-steam-square"></i> Send Message</a>
@@ -28,6 +28,12 @@
                 {{ range $kk, $vv := $v }}
                     <div>{{ $vv }}</div>
                 {{ end }}
+            </div>
+        {{ end }}
+
+        {{ if ne .Player.CommunityVisibilityState 3 }}
+            <div class="alert alert-primary" role="alert">
+                <i class="fas fa-exclamation-triangle text-danger"></i> Profile set to private. Update your <a target="_blank" rel="noopener" href="https://steamcommunity.com/my/edit/settings">privacy settings</a>.
             </div>
         {{ end }}
 
@@ -302,12 +308,6 @@
                     {{/* Friends */}}
                     <div class="tab-pane" id="friends" role="tabpanel">
 
-                        {{ if eq .Player.FriendsCount 0}}
-                            <div class="alert alert-primary" role="alert">
-                                This player either has no friends or has them hidden to the public. Go <a target="_blank" rel="noopener" href="https://steamcommunity.com/my/edit/settings">here</a> to change your privacy settings.
-                            </div>
-                        {{ end }}
-
                         {{ if or (eq .Player.ID .PlayerID) .IsAdmin }}
                             <div id="add-missing-friends" class="text-center mb-3 d-none">
                                 <a class="btn btn-success" href="/players/{{ .Player.ID }}/add-friends">Add Missing Friends</a>
@@ -412,12 +412,6 @@
                     {{/* Game Library */}}
                     <div class="tab-pane" id="games" role="tabpanel">
 
-                        {{ if eq .Player.GamesCount 0 }}
-                            <div class="alert alert-primary" role="alert">
-                                This player's profile is set to private. Go <a target="_blank" rel="noopener" href="https://steamcommunity.com/my/edit/settings">here</a> to change your privacy settings.
-                            </div>
-                        {{ end }}
-
                         <a class="float-right" href="/games/random">Looking for a random game to play?</a>
 
                         <div class="form-row">
@@ -449,13 +443,6 @@
 
                     {{/* Game Stats */}}
                     <div class="tab-pane" id="stats" role="tabpanel">
-
-                        {{ if eq .Player.GamesCount 0 }}
-                            <div class="alert alert-primary" role="alert">
-                                This player's profile is set to private. Go <a target="_blank" rel="noopener" href="https://steamcommunity.com/my/edit/settings">here</a> to change your privacy settings.
-                            </div>
-                        {{ end }}
-
 
                         <div class="row">
                             <div class="col-12 col-md-6 mb-3">
