--- a/cmd/webserver/assets/sass/_home.scss
+++ b/cmd/webserver/assets/sass/_home.scss
@@ -32,6 +32,12 @@ body.dark {
         }
     }
 
+    #tweets {
+        i.fa-twitter, svg.fa-twitter {
+            color: rgb(29, 161, 242);
+        }
+    }
+
     .games {
         img {
             width: 100%;
