--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -91,7 +91,7 @@
             </div>
             <div class="col-12 col-lg-4">
 
-                <div class="card mb-4">
+                <div class="card mb-4" id="tweets">
                     <h5 class="card-header">News <a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter float-right"></i></a></h5>
                     <div class="card-body">
                         Coming Soon
