--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -55,6 +55,10 @@
             height: 300px;
         }
 
+        #players-heatmap-chart{
+            height: 200px;
+        }
+
         #players-chart2 {
             .highcharts-background {
                 cursor: ew-resize;
