Update footer link

--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -11,7 +11,7 @@
                 <br>
                 <a href="https://twitter.com/gamedbonline" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -
                 <a href="https://github.com/gamedb" target="_blank" rel="noopener"><i class="fab fa-github"></i> GitHub</a> -
-                <a href="https://www.patreon.com/bePatron?u=9962078" target="_blank" rel="noopener"><i class="fab fa-patreon"></i> Patreon</a>
+                <a href="https://www.patreon.com/jleagle" target="_blank" rel="noopener"><i class="fab fa-patreon"></i> Patreon</a>
             </small>
         </div>
     </footer>
