--- a/cmd/webserver/templates/admin/tasks.gohtml
+++ b/cmd/webserver/templates/admin/tasks.gohtml
@@ -28,16 +28,16 @@
                                 {{ $realLast:= (index $.Configs (print "task-" .Task.ID)).Value }}
 
                                 <tr data-id="{{ .Task.ID }}" class="cursor-pointer {{ if .Bad }}table-danger{{ end }}" data-action="/admin/tasks?run={{ .Task.ID }}">
-                                    <td>{{ .Task.Name }}</td>
-                                    <td class="prev" data-sort="{{ $realLast }}">
+                                    <td style="width: 40%;">{{ .Task.Name }}</td>
+                                    <td style="width: 20%;" class="prev" data-sort="{{ $realLast }}">
                                         <span data-livestamp="{{ $realLast }}"></span>
                                     </td>
                                     {{ if gt .Next.Unix 0 }}
-                                        <td data-sort="{{ .Prev }}"><span data-livestamp="{{ .Prev.Unix }}"></span></td>
-                                        <td class="next" data-sort="{{ .Next.Unix }}"><span data-livestamp="{{ .Next.Unix }}"></span></td>
+                                        <td style="width: 20%;" data-sort="{{ .Prev }}"><span data-livestamp="{{ .Prev.Unix }}"></span></td>
+                                        <td style="width: 20%;" class="next" data-sort="{{ .Next.Unix }}"><span data-livestamp="{{ .Next.Unix }}"></span></td>
                                     {{ else }}
-                                        <td data-sort="10000000000"></td>
-                                        <td data-sort="10000000000"></td>
+                                        <td style="width: 20%;" data-sort="10000000000"></td>
+                                        <td style="width: 20%;" data-sort="10000000000"></td>
                                     {{ end }}
                                 </tr>
                             {{ end }}
