--- a/cmd/webserver/assets/sass/_tables.scss
+++ b/cmd/webserver/assets/sass/_tables.scss
@@ -182,6 +182,15 @@ table.table {
 
 body.dark {
     table.table {
+
+        tr.table-success {
+            color: #212529;
+
+            a {
+                color: #212529
+            }
+        }
+
         td {
             .icon-name {
                 color: #e9ecef;
