--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -402,18 +402,18 @@
                         </div>
 
                         <div class="card mb-4">
-                            <h5 class="card-header">Player Heatmap - 1 Month</h5>
+                            <h5 class="card-header">Player Count</h5>
                             <div class="card-body pb-0 pl-0">
-                                <div id="players-heatmap-chart">
+                                <div class="player-chart" id="players-chart2">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
                         </div>
 
                         <div class="card mb-4">
-                            <h5 class="card-header">Player Count</h5>
+                            <h5 class="card-header">Player Heatmap - 1 Month</h5>
                             <div class="card-body pb-0 pl-0">
-                                <div class="player-chart" id="players-chart2">
+                                <div class="player-chart" id="players-heatmap-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
