Give empty home panels home

--- a/cmd/webserver/assets/sass/_home.scss
+++ b/cmd/webserver/assets/sass/_home.scss
@@ -38,6 +38,10 @@ body.dark {
         }
     }
 
+    #players, #updated-players {
+        min-height: 500px;
+    }
+
     .games {
         img {
             width: 100%;
