--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -411,7 +411,7 @@
                         </div>
 
                         <div class="card mb-4">
-                            <h5 class="card-header">Player Heatmap - 1 Month</h5>
+                            <h5 class="card-header">Player Heatmap - 28 Day Average</h5>
                             <div class="card-body pb-0 pl-0">
                                 <div class="player-chart" id="players-heatmap-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
