--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -197,7 +197,8 @@
                         <a class="nav-link dropdown-toggle d-none d-lg-block" href="/stats" data-toggle="dropdown">Stats</a>
                         <div class="dropdown-menu">
 
-                            <a class="dropdown-item" href="/stats">Stats</a>
+                            <a class="dropdown-item" href="/stats">Steam</a>
+                            <a class="dropdown-item" href="/stats/gamedb">Game DB</a>
 
                             <div class="dropdown-divider"></div>
 
