--- a/cmd/webserver/templates/_stats_header.gohtml
+++ b/cmd/webserver/templates/_stats_header.gohtml
@@ -4,10 +4,18 @@
         <ul class="nav nav-tabs card-header-tabs" role="tablist">
 
             <li class="nav-item">
-                {{if startsWith .Path "/stats" }}
-                    <span class="nav-link active" role="tab"><i class="fas fa-signal"></i> Stats</span>
+                {{if endsWith .Path "/stats" }}
+                    <span class="nav-link active" role="tab"><i class="fas fa-signal"></i> Steam</span>
                 {{else}}
-                    <a class="nav-link" href="/stats" role="tab"><i class="fas fa-signal"></i> Stats</a>
+                    <a class="nav-link" href="/stats" role="tab"><i class="fas fa-signal"></i> Steam</a>
+                {{end}}
+            </li>
+
+            <li class="nav-item">
+                {{if startsWith .Path "/stats/gamedb" }}
+                    <span class="nav-link active" role="tab"><i class="fas fa-signal"></i> Game DB</span>
+                {{else}}
+                    <a class="nav-link" href="/stats/gamedb" role="tab"><i class="fas fa-signal"></i> Game DB</a>
                 {{end}}
             </li>
 
