--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -13,72 +13,41 @@
             {{ template "_stats_header" . }}
             <div class="card-body">
 
-                <h5>Steam Stats</h5>
                 <div class="row">
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/games" role="button" class="btn btn-success btn-block mb-0">Total Apps<br/>{{ comma64 .AppsCount}}</a>
+                    <div class="col mb-4">
+                        <a href="/games" role="button" class="btn btn-success btn-block mb-0">Apps<br/>{{ comma64 .AppsCount}}</a>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/packages" role="button" class="btn btn-success btn-block mb-0">Total Packages<br/>{{ comma64 .PackagesCount}}</a>
+                    <div class="col mb-4">
+                        <a href="/packages" role="button" class="btn btn-success btn-block mb-0">Packages<br/>{{ comma64 .PackagesCount}}</a>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Total Bundles<br/>{{ comma .BundlesCount}}</a>
+                    <div class="col mb-4">
+                        <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Bundles<br/>{{ comma .BundlesCount}}</a>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/achievements" role="button" class="btn btn-success btn-block mb-0">Total Achievements<br/>{{ comma64 .AchievementsCount}}</a>
+                    <div class="col mb-4">
+                        <a href="/achievements" role="button" class="btn btn-success btn-block mb-0">Achievements<br/>{{ comma64 .AchievementsCount}}</a>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/news" role="button" class="btn btn-success btn-block mb-0">Total Articles<br/>{{ comma64 .ArticlesCount}}</a>
-                    </div>
-                </div>
-
-                <h5>Game DB Player Stats</h5>
-                <div class="row">
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Total Players<br/>{{ comma64 .PlayersCount }}</a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Games<br/>{{ comma64 .PlayerAppsCount }}</a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Friends<br/>{{ comma64 .PlayerFriendsCount }}</a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/badges" role="button" class="btn btn-success btn-block mb-0">Player Badges<br/>{{ comma64 .PlayerBadgesCount }}</a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/groups" role="button" class="btn btn-success btn-block mb-0">Player Groups<br/>{{ comma64 .PlayerGroupsCount }}</a>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-4 col-xl-2 mb-4">
-                        <a href="/groups" role="button" class="btn btn-success btn-block mb-0">Player Achiev's<br/>{{ comma64 .PlayerAchievementsCount }}</a>
+                    <div class="col mb-4">
+                        <a href="/news" role="button" class="btn btn-success btn-block mb-0">Articles<br/>{{ comma64 .ArticlesCount}}</a>
                     </div>
                 </div>
 
                 <h5>Players Online <small>({{ round64 .SteamPlayersOnline }}, {{ round64 .SteamPlayersInGame }} in game)</small></h5>
-                <div class="chart mb-4" id="client-players">
+                <div class="chart" id="client-players">
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
                 <h5>Players Online <small>(5 years)</small></h5>
-                <div class="chart mb-4" id="client-players2">
-                    <i class="fas fa-spinner fa-spin"></i>
-                </div>
-
-                <h5 class="clearfix">
-                    Game DB Player Levels <small>(For levels below 2,000)</small>
-                    <small class="float-right">See <a href="/experience">Experience</a> for more!</small>
-                </h5>
-                <div class="chart mb-4" id="player-levels">
+                <div class="chart" id="client-players2">
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
                 <h5>App Scores</h5>
-                <div class="chart mb-4" id="scores">
+                <div class="chart" id="scores">
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
                 <h5>App Release Dates</h5>
-                <div class="chart mb-0" id="release-dates">
+                <div class="chart" id="release-dates">
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
