Add community link to home players

--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -187,6 +187,7 @@
                                 <tr>
                                     <th scope="col">Player</th>
                                     <th scope="col">Updated</th>
+                                    <th scope="col"></th>
                                 </tr>
                                 </thead>
                                 <tbody>
