--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -224,12 +224,8 @@
                             <a class="dropdown-item" href="/achievements">Achievements Search</a>
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
-{{/*                            <a class="dropdown-item" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">Twitter <i class="fas fa-external-link-alt"></i></a>*/}}
-
-                            <div class="dropdown-divider"></div>
-
-                            <a class="dropdown-item" href="/api">Game DB API</a>
-                            <a class="dropdown-item" href="/steam-api">Steam API</a>
+                            {{/*<a class="dropdown-item" href="https://twitter.com/gamedbonline" target="_blank" rel="noopener">Twitter <i class="fas fa-external-link-alt"></i></a>*/}}
+                            <a class="dropdown-item" href="/api">API</a>
 
                         </div>
                     </li>
