Order player search by score

--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -13,7 +13,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1 mb-2">
-                        <input class="form-control" type="search" placeholder="Search for a Player" id="search" name="search" autofocus>
+                        <input class="form-control" type="search" placeholder="Search for a Player" id="search" name="search" autofocus data-col-sort="15">
                         <label for="search" class="sr-only sr-only-focusable">Search for a Player</label>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
@@ -83,6 +83,7 @@
                             <th scope="col">Achievements</th>
                             <th scope="col">Completed</th>
                             <th scope="col"></th> {{/* Link */}}
+                            <th scope="col">Search Score</th>
                         </tr>
                         </thead>
                         <tbody>
