Put tags into a table

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -233,13 +233,17 @@
 
                                 <div class="card mt-3 mt-lg-0">
                                     <h5 class="card-header">Tags</h5>
-                                    <div class="card-body p-0 pr-1" id="tags">
-                                        {{ range $key, $value := .App.TagCounts }}
-                                            <div class="clearfix" style="background: linear-gradient(to right, #28a74522 {{ percent .Count $.TagsMax }}%, transparent {{ percent .Count $.TagsMax }}%)">
-                                                <a class="float-left" href="/games?tags={{ .ID }}">{{ .Name }}</a>
-                                                <span class="float-right">{{ comma .Count }} <i class="fas fa-thumbs-up"></i></span>
-                                            </div>
-                                        {{ end }}
+                                    <div class="card-body p-0" id="tags">
+                                        <table class="table table-no-border table-sm mb-0">
+                                            <tbody>
+                                            {{ range $key, $value := .App.TagCounts }}
+                                                <tr data-link="/games?tags={{ .ID }}" style="background: linear-gradient(to right, #28a74522 {{ percent .Count $.TagsMax }}%, transparent {{ percent .Count $.TagsMax }}%)">
+                                                    <td>{{ .Name }}</td>
+                                                    <td class="text-right"><small>{{ comma .Count }} <i class="fas fa-thumbs-up"></i></small></td>
+                                                </tr>
+                                            {{ end }}
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
 
