Update users list

--- a/cmd/webserver/templates/admin/users.gohtml
+++ b/cmd/webserver/templates/admin/users.gohtml
@@ -13,8 +13,9 @@
                     <table class="table table-hover table-striped table-counts" data-row-type="users" data-path="/admin/users.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">Date</th>
                             <th scope="col">Email</th>
+                            <th scope="col">Signup Up</th>
+                            <th scope="col">Logged In</th>
                             <th scope="col">Profile</th>
                             <th scope="col">Level</th>
                         </tr>
